Fix: stop full width photo overflowing in IE

--- a/src/scss/modules/photo.scss
+++ b/src/scss/modules/photo.scss
@@ -51,6 +51,7 @@
 
     &--full-width {
         clear: both;
+        max-width: 100%;
     }
 
     &--full-width#{&}--rotate-left {
